force-app/main/default/objects/Visit/fields/nepa_auto_generated__c.field-meta.xml
<CustomField>
    <fullName>nepa_auto_generated__c</fullName>
    <label>Auto Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this Visit was created automatically by NEPA_Team_Assembly_Orchestrator in response to a GIS protection layer hit. False for manually created visits.</description>
    <inlineHelpText>This visit was automatically generated by the GIS team assembly process.</inlineHelpText>
</CustomField>