force-app/main/default/objects/Visit/fields/nepa_discipline__c.field-meta.xml
<CustomField>
    <fullName>nepa_discipline__c</fullName>
    <label>Discipline</label>
    <type>Text</type>
    <length>100</length>
    <description>Specialist discipline for this field survey visit (e.g., Hydrology, Sage-Grouse, Botany). Must exactly match ServiceResource.nepa_discipline__c and NEPA_Layer_Discipline__mdt.Discipline__c. Populated by NEPA_Team_Assembly_Orchestrator.</description>
    <inlineHelpText>The specialist discipline required for this field survey (e.g., Hydrology, Botany).</inlineHelpText>
</CustomField>