force-app/main/default/objects/Visit/fields/nepa_hard_gate__c.field-meta.xml
<CustomField>
    <fullName>nepa_hard_gate__c</fullName>
    <label>Hard Gate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, this visit blocks stage advancement on the related IndividualApplication. The NEPA_Stage_Gate flow checks for any open visit with nepa_hard_gate__c = true before allowing process stage transition. Set to true by NEPA_Plaintiff_Intelligence for tribal consultation visits and by NEPA_CE_Screener for extraordinary-circumstances visits.</description>
    <inlineHelpText>This visit is a hard gate. The process cannot advance to the next stage until this visit is completed.</inlineHelpText>
</CustomField>