force-app/main/default/objects/Visit/fields/nepa_process__c.field-meta.xml
<CustomField>
    <fullName>nepa_process__c</fullName>
    <label>NEPA Process</label>
    <type>Lookup</type>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Field Survey Visits</relationshipLabel>
    <relationshipName>Field_Survey_Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The IndividualApplication (NEPA Process) that triggered this field survey visit. Populated by NEPA_Team_Assembly_Orchestrator during GIS-driven auto-assembly.</description>
    <inlineHelpText>The NEPA process that this field survey visit was created for.</inlineHelpText>
</CustomField>