force-app/main/default/objects/Visit/fields/nepa_reinit_action_modified__c.field-meta.xml
<CustomField>
    <fullName>nepa_reinit_action_modified__c</fullName>
    <label>BiOp Reinit: Action Modified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>ESA §7 BiOp reinitiation trigger per 50 CFR &amp;#167;402.16(a)(4). When checked by a field inspector, NEPA_BiOp_Reinitiation_Checker fires and creates a High-priority ESA Coordinator Task if an active BiOp exists on the parent IndividualApplication. Also adds +12 pts to nepa_challenge_risk_delta__c.</description>
    <inlineHelpText>[50 CFR &amp;#167;402.16(a)(4)] Action is subsequently modified in a manner that causes effect not previously considered. Field detection: Compare current construction/operation footprint to BiOp-authorized footprint at each inspection</inlineHelpText>
</CustomField>