force-app/main/default/objects/Visit/fields/nepa_reinit_amount_or_extent_exceeded__c.field-meta.xml
<CustomField>
    <fullName>nepa_reinit_amount_or_extent_exceeded__c</fullName>
    <label>BiOp Reinit: Take Exceeded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>ESA §7 BiOp reinitiation trigger per 50 CFR &amp;#167;402.16(a)(2). When checked by a field inspector, NEPA_BiOp_Reinitiation_Checker fires and creates a High-priority ESA Coordinator Task if an active BiOp exists on the parent IndividualApplication. Also adds +12 pts to nepa_challenge_risk_delta__c.</description>
    <inlineHelpText>[50 CFR &amp;#167;402.16(a)(2)] Amount or extent of take specified in incidental take statement exceeded. Field detection: Field inspection: count dead/injured individuals; compare to ITS threshold</inlineHelpText>
</CustomField>