force-app/main/default/objects/Visit/fields/nepa_reinit_new_information__c.field-meta.xml
<CustomField>
    <fullName>nepa_reinit_new_information__c</fullName>
    <label>BiOp Reinit: New Information</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>ESA §7 BiOp reinitiation trigger per 50 CFR &amp;#167;402.16(a)(3). When checked by a field inspector, NEPA_BiOp_Reinitiation_Checker fires and creates a High-priority ESA Coordinator Task if an active BiOp exists on the parent IndividualApplication. Also adds +12 pts to nepa_challenge_risk_delta__c.</description>
    <inlineHelpText>[50 CFR &amp;#167;402.16(a)(3)] New information reveals effects not considered or different than anticipated. Field detection: Survey data, population counts, habitat assessments collected during monitoring visits</inlineHelpText>
</CustomField>