force-app/main/default/objects/Visit/fields/nepa_reinit_new_species_listing__c.field-meta.xml
<CustomField>
    <fullName>nepa_reinit_new_species_listing__c</fullName>
    <label>BiOp Reinit: New Species Listing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>ESA §7 BiOp reinitiation trigger per 50 CFR &amp;#167;402.16(a)(1). When checked by a field inspector, NEPA_BiOp_Reinitiation_Checker fires and creates a High-priority ESA Coordinator Task if an active BiOp exists on the parent IndividualApplication. Also adds +12 pts to nepa_challenge_risk_delta__c.</description>
    <inlineHelpText>[50 CFR &amp;#167;402.16(a)(1)] New species listed or critical habitat designated that may be affected. Field detection: Cross-check project location against updated ECOS critical habitat polygons at each inspection</inlineHelpText>
</CustomField>