force-app/main/default/objects/Visit/listViews/All_Field_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Field_Surveys</fullName>
    <filterScope>Everything</filterScope>
    <label>All Field Surveys</label>
    <columns>Subject</columns>
    <columns>nepa_discipline__c</columns>
    <columns>nepa_gate_status_visual__c</columns>
    <columns>nepa_hard_gate__c</columns>
    <columns>PlannedVisitStartTime</columns>
    <columns>Status</columns>
    <columns>nepa_process__c</columns>
</ListView>