force-app/main/default/objects/Visit/listViews/Open_Field_Surveys.listView-meta.xml
<ListView>
    <fullName>Open_Field_Surveys</fullName>
    <filterScope>Everything</filterScope>
    <label>Open Field Surveys</label>
    <columns>Name</columns>
    <columns>nepa_discipline__c</columns>
    <columns>nepa_gate_status_visual__c</columns>
    <columns>nepa_hard_gate__c</columns>
    <columns>PlannedVisitStartTime</columns>
    <columns>Status</columns>
    <columns>nepa_process__c</columns>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
</ListView>